# tplexity-sirius

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/product_research/: Анализ результатов опроса.docx  Конкуренты.docx
evaluation/generation/: eval1.ipynb  requirements.txt
evaluation/generation/config/: metrics_config.yaml  model_config.yaml
evaluation/generation/outputs/: best_example.json  bottom5_examples.json  results.parquet  summary.json  top5_examples.json  worst_example.json
evaluation/generation/src/: __init__.py  context_extractor.py  custom_metrics.py  dataset_loader.py  find_best_worst.py  inference_client.py  judge_prompts.py  main.py  ragas_runner.py  service_manager.py
evaluation/retrieval/: chunks_output.json  eval_recall.ipynb  eval_results_multi_k.json  eval_results_recall@5.json  eval_with_llm.ipynb  load_data.py  load_data_to_qdrant.ipynb  report.txt
evaluation/retrieval/eval_data/: messages_diverse_1000posts_all_channels.json  queries.json
evaluation/routing/: evaluate_metrics.ipynb
src/tplexity/: __init__.py
src/tplexity/bot/: Dockerfile  app.py  bot.py  config.py  example.env  pyproject.toml  service_client.py
src/tplexity/bot/api/: dependencies.py  routers.py
src/tplexity/generation/: Dockerfile  app.py  config.py  example.env  generation_service.py  llm_client.py  memory_service.py  prompts.py  pyproject.toml
src/tplexity/generation/api/: dependencies.py  routers.py  schemas.py
src/tplexity/llm_client/: Dockerfile  __init__.py  app.py  client.py  config.py  example.env  pyproject.toml
src/tplexity/llm_client/api/: __init__.py  dependencies.py  routers.py  schemas.py
src/tplexity/parser/: Dockerfile  app.py  authorize_telegram.py  config.py  example.env  llm_batcher.py  llm_client.py  load_historical_posts.py  markup_last_month.py  monitor_service.py  post_deletion_service.py  pyproject.toml  relevance_analyzer.py  telegram_downloader.py
src/tplexity/parser/api/: dependencies.py  routers.py  schemas.py
src/tplexity/retriever/: Dockerfile  app.py  config.py  dense_embedding.py  example.env  pyproject.toml  reranker.py  retriever_service.py  sparse_embedding.py  utils.py  vector_search.py
src/tplexity/retriever/api/: dependencies.py  routers.py  schemas.py
tests/: test_generation_service.ipynb  test_llm_client.ipynb  test_retriever_service.ipynb
