[project]
name = "tplexity"
version = "0.1.0"
description = ""
authors = [
    {name = "avolxn",email = "vlad.eldashov2303@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "qdrant-client (>=1.7.0,<2.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "sentence-transformers (>=3.0.0,<4.0.0)",
    "numpy (>=2.1.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "fastembed (>=0.7.3,<0.8.0)",
    "einops (>=0.8.1,<0.9.0)",
    "pymorphy3 (>=2.0.6,<3.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "telethon (>=1.36.0)",
    "aiogram (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.0.0)",
    "pandas (>=2.0.0)",
    "pyarrow (>=10.0.0)",
    "langchain (>=0.1.0)",
    "langchain-text-splitters (>=0.0.1)",
    "python-multipart (>=0.0.6)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "redis[hiredis] (>=5.0.0,<6.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
]

[tool.poetry]
packages = [{include = "tplexity", from = "src"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pre-commit = "^3.0.0"
ipykernel = "^7.1.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 120
exclude = [
    "evaluation",
    "tests",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C", "UP", "S"]
ignore = ["E501", "E741", "B008", "S104", "B904", "C901"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"